[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "client"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"

# Poda project dependencies
pod = { path = "../pod" }
dispencer = { path = "../dispencer" }
challenger = { path = "../challenger" }
storage-provider = { path = "../storage-provider" }
common = { path = "../common" }

# For proper address derivation
ethers = { version = "2.0", features = ["legacy"] } 

serde = "1.0.219"
dotenv = "0.15.0"
reqwest = "0.12.20"
anyhow = "1.0.98"
