[package]
name = "dispencer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
reed-solomon-erasure = "6.0.0"
reed-solomon-simd = "3.0.1"
reqwest = "0.12.19"
serde = "1.0.219"
serde_json = "1.0.140"
sha3 = "0.10.8"
hex = "0.4.3"
warp = "0.3.7"
base64 = "0.22.1"
pod = { path = "../pod" }
storage-provider = { path = "../storage-provider" }
tokio = { version = "1.36", features = ["full", "test-util", "rt-multi-thread"] }
dotenv = "0.15.0"

[dev-dependencies]
mockall = "0.13.1"
