[package]
name = "dispencer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt"] }
reqwest = { version = "0.12.20", features = ["json"] }
reed-solomon-erasure = "6.0.0"
sha3 = "0.10.8"
pod = { path = "../pod" }
storage-provider = { path = "../storage-provider" }
kzg = { path = "../kzg" }
types = { path = "../types" }
warp = "0.3.7"
dotenv = "0.15.0"
merkle_tree = { version = "0.1.0", path = "../merkle_tree" }

[dev-dependencies]
mockall = "0.13.1"
