[package]
name = "kzg"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-std = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-bls12-381 = "0.4"
ark-serialize = "0.4"
ark-bn254 = "0.4"
rand = "0.8.5"
types = { path = "../types" }
pod = { version = "0.1.0", path = "../pod" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha3 = "0.10.8"
lazy_static = "1.5.0"

[dev-dependencies]
