[package]
name = "kzg"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-std = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-bls12-381 = "0.5"
ark-serialize = "0.5"
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
lazy_static = "1.5.0"

[dev-dependencies]
pod = { version = "0.1.0", path = "../pod" }
sha3 = "0.10.8"
rand = "0.9.1"