[package]
name = "pod"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
tokio = { version = "1.45.0", features = ["rt"] }
pod-sdk = { git = "https://github.com/podnetwork/pod-sdk" }
anyhow = "1.0.98"
alloy = { version = "0.12.1", features = ["sol-types", "contract"] }
async-trait = "0.1.88"
mockall = "0.13.1"
common = { path = "../common" }
