[package]
name = "storage-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.7"
sha2 = "0.10.9"
base64 = "0.22.1"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.10.1"
reqwest = { version = "0.11.24", features = ["json"] }
tokio-test = "0.4.3"
