[package]
name = "storage-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1.77"
tokio = { version = "1.45.0", features = ["rt"] }
warp = "0.3.7"
hex = "0.4.3"
alloy = { version = "0.12.1", features = ["sol-types", "contract"] }
alloy-sol-types = "1.2.0"
rand = "0.9.1"
pod = { path = "../pod" }
sha3 = "0.10.8"
dotenv = "0.15.0"
types = { path = "../types" }
kzg = { version = "0.1.0", path = "../kzg" }
merkle_tree = { version = "0.1.0", path = "../merkle_tree" }

[dev-dependencies]
tempfile = "3.10.1"
reqwest = { version = "0.12.12", features = ["json"] }
tokio-test = "0.4.3"
