[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
storage-provider = { path = "../storage-provider" }
dispencer = { path = "../dispencer" }
pod = { path = "../pod" }
rand = "0.9.1"
tokio = "1.45.1"
base64 = "0.22.1"
reqwest = "0.12.20"
tempfile = "3.20.0"
serde = "1.0.219"
anyhow = "1.0.98"
sha3 = "0.10.8"
