[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
serde_json = "1.0.140"
storage-provider = { path = "../storage-provider" }
dispencer = { path = "../dispencer" }
pod = { path = "../pod" }
rand = "0.9.1"
tokio = "1.45.1"
reqwest = "0.12.20"
tempfile = "3.20.0"
serde = "1.0.219"
anyhow = "1.0.98"
sha3 = "0.10.8"
shared = "0.1.2"
common = { path = "../common" }
ark-bls12-381 = "0.5"
ark-std = "0.5"
kzg = { path = "../kzg" }
merkle_tree = { version = "0.1.0", path = "../merkle_tree" }

[dependencies]
challenger = { version = "0.1.0", path = "../challenger" }
client = { version = "0.1.0", path = "../client" }
merkle_tree = { version = "0.1.0", path = "../merkle_tree" }
